# dbini-torch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  pytest.yml  schedule-update-actions.yml  sphinx.yml
src/: dbini.py  solver.py
src/dbini_torch/: __init__.py  dbini.py  solver.py
tests/: test.py  test_np_parity.py
tests/xucao_bilateral_normal_integration/: bilateral_normal_integration_numpy.py
